<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallz">


    <Button
        android:id="@+id/btnalbum"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btncomprar"
        android:layout_marginTop="129dp"
        android:text="@string/title_album"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/btncomprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncomprar"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnavance"
        android:layout_marginBottom="163dp"
        android:text="@string/title_tienda"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnalbum" />

    <Button
        android:id="@+id/btnrepetidas"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btncomprar"
        android:layout_marginBottom="85dp"
        android:text="@string/title_intercambio"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncomprar" />

    <Button
        android:id="@+id/btnavance"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="201dp"
        android:text="@string/title_avance"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnrepetidas"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:autoSizeMaxTextSize="@android:dimen/dialog_min_width_major"
        android:text="@string/title_menu"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnalbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView6"
        android:layout_alignTop="@+id/btnavance"
        app:srcCompat="@drawable/ic_done_all"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="380dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/btncomprar"
        app:srcCompat="@drawable/ic_shopping_cart"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="193dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/imageView3"
        android:layout_alignTop="@+id/btnrepetidas"
        app:srcCompat="@drawable/ic_import_export"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="288dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnalbum"
        android:layout_marginStart="114dp"
        app:srcCompat="@drawable/ic_photo_album"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="128dp" />

</RelativeLayout>